--- a/content/docs/benefits/cases/increo.slim
+++ b/content/docs/benefits/cases/increo.slim
@@ -1,51 +1,99 @@
 Libs: -comments
-Flags: hidden
+Flags: 
+Icon: quote-left
+
+
 
 h1 InCreo Interactive Creations
 
 
-== content_for :banner do
+/ == content_for :banner do
+/   .row
+/     .span8
+/       .container
+/         .slider
+/           #flex1.flexslider
+/             ul.slides
+/               li
+/                 img src="https://lh5.googleusercontent.com/-6qM__1BDZPs/UcmWQn2oUFI/AAAAAAAAAPs/zacVyULNIBk/w1058-h693-no/hires_IMG_8348.jpg"
+/                 .slide-caption.n.hidden-phone
+/                   h3 ImageResizer saves time, money and increases developer happiness
+/                   p InCreo Interactive Creations
+            /   li
+            /     img src="http://z.zr.io/rw/clients/increo-2.png?format=jpg&width=1170&height=390&mode=crop&anchor=topcenter"
+            /     .slide-caption.n.hidden-phone
+            /       h3 Eilev Hagen, System developer, InCreo Interactive Creations
+            /       p Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
+            / ul.flex-direction-nav
+            /   li: a.flex-prev href="#" Previous
+            /   li: a.flex-next href="#" Next
+        
 
-  .container
-    .slider
-      #flex1.flexslider
-        ul.slides
-          li
-            img src="http://z.zr.io/rw/clients/increo-1.jpg?width=1170"
-            .slide-caption.n.hidden-phone
-              h3 Eilev Hagen, System developer, InCreo Interactive Creations
-              p Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
-          li
-            img src="http://z.zr.io/rw/clients/increo-2.png?format=jpg&width=1170&height=390&mode=crop&anchor=topcenter"
-            .slide-caption.n.hidden-phone
-              h3 Eilev Hagen, System developer, InCreo Interactive Creations
-              p Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
-        ul.flex-direction-nav
-          li: a.flex-prev href="#" Previous
-          li: a.flex-next href="#" Next
-    .whatisir
-      h1 InCreo Interactive Creations uses ImageResizer to reduce costs and improve agility
-      p
-        | ImageResizer saves time, money, and increases developer happiness at InCreo Interactive Creations
-  hr
-.row
-    
-  .span3
-    markdown:
+        / .whatisir
+        /   h1 ImageResizer saves time, money and increases developer happiness
+        /   h1 InCreo Interactive Creations
+          / p
+          /   | ImageResizer saves time, money and increases developer happiness at InCreo Interactive Creations
+  / hr
 
-      ### What we do at InCreo Interactive Creations
 
-      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-  .span3
-    img src="http://increo.no/media/kontakt/trondheimkontoret.jpg?maxwidth=184&maxheight=184"
-
-markdown:
+ul.thumbnails
+  li.span6
+    img src="https://lh5.googleusercontent.com/-6qM__1BDZPs/UcmWQn2oUFI/AAAAAAAAAPs/zacVyULNIBk/w1058-h693-no/hires_IMG_8348.jpg"
+    / h3 InCreo Interactive Creations
+    h3 Imageresizer Saves Time, Money and Increases Developer Happiness
+  / li.span2.hidden-phone
+  /   img src="https://scontent-b-mxp.xx.fbcdn.net/hphotos-prn1/62901_10151444878294419_945087527_n.jpg"
+  li.span2.hidden-phone
+    img src="http://increo.no/App_Themes/InCreo/images/ic_square_logo_clean.jpg"
+  li.span2.hidden-phone
+    img src="https://scontent-a-mxp.xx.fbcdn.net/hphotos-ash3/556436_10151386107254419_1452559050_n.jpg"
   
 
-  ##Why we like ImageResizer
+.row
+  .span8
+    markdown:
 
-  >Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
-  > - Eilev Hagen, System developer, InCreo Interactive Creations
+      Increo is a full service digital agency that was established in 1997. They provide a complete solution including consultancy, project management, design, web development, maintance and hosting. Increo has teams of specialists for desktop, tablet and mobile. Their goal is to help their clients fulfill their online potential and ultimately lead to their success.
+
+      Increo understands that every client comes with a set of unique ideas and goals and this requires a unique solution. Increo is the creator of the Wondercode CMS and eCommerce solution and they are experts at customizing it to every client's specific requirements.
+
+
+<object width= "560" height="315"><param name="movie" value="http://www.youtube.com/v/XlItgjbtygY&rel=0&theme=light&showinfo=0&hd=1&autohide=1&color=white"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/XlItgjbtygY&rel=0&theme=light&showinfo=0&hd=1&autohide=1&color=white" type="application/x-shockwave-flash" allowfullscreen="true" width="560" height="315" allowscriptaccess="always"></embed></object>
+
+
+h2 Why we like ImageResizer
+
+.row
+  .span8
+    markdown:
+
+
+      >Handling images in various formats is a daily challenge in our projects. Using the ImageResizer saves valuable time. We don't have to use effort creating different sizes or dealing with optimization, it just works. This library is strongly recommended. 
+
+.row
+  .span8
+    ul.media-list
+      li.media
+        img.media-object.pull-right.hidden-phone src="http://increo.no/media/ansatte/increo2013/eilev-hagen.png" width="64" height="64"
+        .media-body style="text-align:right;"
+          h3.media-heading
+          | &mdash;Eilev Hagen, System developer
+          p
+          | InCreo Interactive Creations
+
+
+
+/ .row
+/   .span8
+/     h4 style="text-align:right;"
+/       | &mdash;Eilev Hagen, System developer
+/       br
+/       | InCreo Interactive Creations
+/ .row
+/   .span1.offset7.hidden-phone
+/     img src="http://increo.no/media/ansatte/increo2013/eilev-hagen.png"
+
 
 
 == content_for :next_row do
@@ -58,28 +106,15 @@ markdown:
 
   - testimonials = Hash[*quotes.collect{|v| [v[:domain],v]}.flatten]
 
-  - websites = ["skybrud-dk-1","solidstockart-com-1","vevo-com-2","nextgenaero-com-1","msn-co-uk-1","airnewzealand-com-1","bilbasen-dk-3","bjarnhoff-com-1","strath-ac-uk-1","pilgrim-dk-1","yamaha-motor-eu-2","citrus-retail-com-1","homgroup-com-1","cloudnine-se-1","creuna-se-1","delabo-it-1","dotagency-co-uk-1","idea-hr-1","increo-no-3","tradera-com-1","unique-dk-1","valg.oim-dk-1","lewis-co-uk-1", "tradera-com-1","enferno-se-1"].map { |w| d = parse_domain(w); d.quote = testimonials.delete(d.domain); d }
-  h2 Some sites we've built with ImageResizer
+  - websites = ["skybrud-dk-1","solidstockart-com-1","vevo-com-2","nextgenaero-com-1","msn-co-uk-1","airnewzealand-com-1","bilbasen-dk-3","bjarnhoff-com-1","strath-ac-uk-1","pilgrim-dk-1","yamaha-motor-eu-2","citrus-retail-com-1","homgroup-com-1","cloudnine-se-1","creuna-se-1","delabo-it-1","dotagency-co-uk-1","idea-hr-1","tradera-com-1","unique-dk-1","valg-oim-dk-1","lewis-co-uk-1","enferno-se-1", "increo-no-3"].map { |w| d = parse_domain(w); d.quote = testimonials.delete(d.domain); d }
+  h2 InCreo Websites using ImageResizer
 
-
-  #portfolio-wrapper.row
-    - websites.each do |w|
-      - unless w.quote.nil?
-        .span4.portfolio-item class="#{w.tags.empty? ? "un" : w.tags * " "}"
-          .quotes
-            .quote
-              =w.quote.quote
-            .author
-              =w.quote.author
-      .span4.portfolio-item class="#{w.tags.empty? ? "un" : w.tags * " "}"
-        .picture
-          a rel="image" href="#{w.url}?width=800" title="#{w.domain}"
-            img src="#{w.url}?width=362&format=jpg&quality=90" alt="#{w.domain}"
-            .image-overlay-zoom
-          .item-description.alt
-            h5
-              a href="http://#{w.domain}"
-                =w.domain
-            p
-              = "Photo ##{w.index} from #{w.domain}  #{w.tags.nil? ? "" : w.tags * ", "}"
-          .post-meta
+  .row
+    .span8
+      #portfolio-wrapper.row
+        - websites.each do |w|
+          .span2.portfolio-item class="#{w.tags.empty? ? "un" : w.tags * " "}"
+            .picture
+              a rel="image" href="#{w.url}?width=800" title="#{w.domain}"
+                img src="#{w.url}?width=362&format=jpg&quality=90" alt="#{w.domain}"
+                .image-overlay-zoom
