--- a/content/docs/benefits/scaling-quality.slim
+++ b/content/docs/benefits/scaling-quality.slim
@@ -8,16 +8,17 @@ h1 Scaling Quality Comparison
 - scaling_options = {"GDI default" => "", "WIC Fant" =>  "&builder=wic&w.filter=fant", "WIC Bicubic" =>  "&builder=wic&w.filter=bicubic", "FreeImage Bicubic" =>  "&builder=freeimage&fi.scale=bicubic", "FreeImage Lanczos" =>  "&builder=freeimage&fi.scale=lanczos", "FreeImage CatmullRom" =>  "&builder=freeimage&fi.scale=catmullrom", "FreeImage Bspline" =>  "&builder=freeimage&fi.scale=bspline"}
 
 - scaling_before_default = "GDI default"
-- scaling_after_default = "GDI default"
+- scaling_after_default = "WIC Fant"
 
-- image_width          = 600
-- cache_buster         = 34
-- example_images       = ['rings2.gif', '1873-divers.png', 'bars.gif', 'rings.jpg', 'parrot-feather.jpg', 'space-needle.jpg']
+
+- image_width          = 300
+- image_height         = 300
+- cache_buster         = 42
+- example_images       = ['rings.jpg', 'rings2.gif', '1873-divers.png', 'bars.gif',  'parrot-feather.jpg', 'space-needle.jpg']
 - image_url_prefix     = 'http://z.zr.io/rw/tutorials/resampling/'
-- image_options_before = scaling_options[scaling_before_default] + "&scale=both"
-- image_options_after  = scaling_options[scaling_after_default] + "&scale=both"
+- image_options_before = scaling_options[scaling_before_default]
+- image_options_after  = scaling_options[scaling_after_default]
 
-h1 #{}
 
 .row-fluid
   .span8.well
@@ -27,40 +28,41 @@ h1 #{}
     br
     p
       .twentytwenty-container
-        img src="#{image_url_prefix}#{example_images[0]}?width=#{image_width}#{image_options_before}&random=#{cache_buster}" id="plugin-example-before"
-        img src="#{image_url_prefix}#{example_images[0]}?width=#{image_width}#{image_options_after}&random=#{cache_buster}" id="plugin-example-after"
+        img.zoom-image-2x src="#{image_url_prefix}#{example_images[0]}?width=#{image_width}&height=#{image_height}#{image_options_before}&random=#{cache_buster}" id="plugin-example-before"
+        img.zoom-image-2x src="#{image_url_prefix}#{example_images[0]}?width=#{image_width}&height=#{image_height}#{image_options_after}&random=#{cache_buster}" id="plugin-example-after"
 
     .row-fluid.hidden-phone
       - example_images.each do | img |
         .span2
           p 
-            a.plugin-example-button data-image-before="#{image_url_prefix}#{img}?width=#{image_width}#{image_options_before}&random=#{cache_buster}" data-image-after="#{image_url_prefix}#{img}?width=#{image_width}#{image_options_after}&random=#{cache_buster}"
+            a.plugin-example-button data-image-before="#{image_url_prefix}#{img}?width=#{image_width}&height=#{image_height}#{image_options_before}&random=#{cache_buster}" data-image-after="#{image_url_prefix}#{img}?width=#{image_width}&height=#{image_height}#{image_options_after}&random=#{cache_buster}"
               img src="#{image_url_prefix}#{img}?width=128&height=128&random=#{cache_buster}"
     .row-fluid.hidden-phone
       .span4
-        h4 Before
+        / h4 Before
         form#compare-before
         - scaling_options.each_with_index do | (key, value), index |
           label.radio
             - if key == scaling_before_default
-              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="width=#{image_width}&scale=both#{value}&random=#{cache_buster}" checked="" #{key}
+              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" checked="" #{key}
             - else
-              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="width=#{image_width}&scale=both#{value}&random=#{cache_buster}" #{key}
+              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" #{key}
       .span4.offset2
-        h4 After
+        / h4 After
         form#compare-after
         - scaling_options.each_with_index do | (key, value), index |
           label.radio
             - if key == scaling_after_default
-              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="width=#{image_width}&scale=both#{value}&random=#{cache_buster}" checked="" #{key}
+              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" checked="" #{key}
             - else
-              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="width=#{image_width}&scale=both#{value}&random=#{cache_buster}" #{key}
+              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" #{key}
 
 
 h2#usage Usage
 - scaling_options.each do | key, value |
   p
-  | #{key}
-  code #{value}
+  | #{key}: 
+  - unless value.empty?
+    code #{value}
 
 
