--- a/content/css/twentytwenty.css
+++ b/content/css/twentytwenty.css
@@ -154,5 +154,7 @@
   image-rendering: -o-crisp-edges;
   image-rendering: -webkit-optimize-speed;
   image-rendering: crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+
   -ms-interpolation-mode: nearest-neighbor;
 }
