--- a/content/docs/benefits/scaling-quality.slim
+++ b/content/docs/benefits/scaling-quality.slim
@@ -11,10 +11,11 @@ h1 Scaling Quality Comparison
 - scaling_after_default = "WIC Fant"
 
 
-- image_width          = 300
+- image_width          = 600
 - image_height         = 300
 - cache_buster         = 42
-- example_images       = ['rings.jpg', 'rings2.gif', '1873-divers.png', 'bars.gif',  'parrot-feather.jpg', 'space-needle.jpg']
+- image_size           = "maxwidth=#{image_width}&maxheight=#{image_height}&format=png&random=#{cache_buster}"
+- example_images       = ['rings.jpg', 'rings-large.gif', '1873-divers.png',  'parrot-feather.jpg', 'space-needle.jpg']
 - image_url_prefix     = 'http://z.zr.io/rw/tutorials/resampling/'
 - image_options_before = scaling_options[scaling_before_default]
 - image_options_after  = scaling_options[scaling_after_default]
@@ -28,14 +29,14 @@ h1 Scaling Quality Comparison
     br
     p
       .twentytwenty-container
-        img.zoom-image-2x src="#{image_url_prefix}#{example_images[0]}?width=#{image_width}&height=#{image_height}#{image_options_before}&random=#{cache_buster}" id="plugin-example-before"
-        img.zoom-image-2x src="#{image_url_prefix}#{example_images[0]}?width=#{image_width}&height=#{image_height}#{image_options_after}&random=#{cache_buster}" id="plugin-example-after"
+        img.zoom-image-2x-disabled src="#{image_url_prefix}#{example_images[0]}?#{image_size}#{image_options_before}" id="plugin-example-before"
+        img.zoom-image-2x-disabled src="#{image_url_prefix}#{example_images[0]}?#{image_size}#{image_options_after}" id="plugin-example-after"
 
     .row-fluid.hidden-phone
       - example_images.each do | img |
         .span2
           p 
-            a.plugin-example-button data-image-before="#{image_url_prefix}#{img}?width=#{image_width}&height=#{image_height}#{image_options_before}&random=#{cache_buster}" data-image-after="#{image_url_prefix}#{img}?width=#{image_width}&height=#{image_height}#{image_options_after}&random=#{cache_buster}"
+            a.plugin-example-button data-image-before="#{image_url_prefix}#{img}?#{image_size}#{image_options_before}" data-image-after="#{image_url_prefix}#{img}?#{image_size}#{image_options_after}"
               img src="#{image_url_prefix}#{img}?width=128&height=128&random=#{cache_buster}"
     .row-fluid.hidden-phone
       .span4
@@ -44,18 +45,18 @@ h1 Scaling Quality Comparison
         - scaling_options.each_with_index do | (key, value), index |
           label.radio
             - if key == scaling_before_default
-              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" checked="" #{key}
+              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="#{image_size}" checked="" #{key}
             - else
-              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" #{key}
+              input id="optionBefore#{index + 1}" name="compare-before" type="radio" value="#{image_size}" #{key}
       .span4.offset2
         / h4 After
         form#compare-after
         - scaling_options.each_with_index do | (key, value), index |
           label.radio
             - if key == scaling_after_default
-              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" checked="" #{key}
+              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="#{image_size}" checked=""  #{key}
             - else
-              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="width=#{image_width}&height=#{image_height}#{value}&random=#{cache_buster}" #{key}
+              input id="optionsAfter#{index + 1}" name="compare-after" type="radio" value="#{image_size}" #{key}
 
 
 h2#usage Usage
