--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -21,8 +21,8 @@ html(lang="en" class="no-js")
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
   
     link href="/css/less/site.css" rel="stylesheet"
-    - if page.lib? :twentytwenty
-      link href="/css/twentytwenty.css" rel="stylesheet"
+    / - if page.lib? :twentytwenty
+    /   link href="/css/twentytwenty.css" rel="stylesheet"
     / link href="/css/less/parallax-slider.css" rel="stylesheet"
 
     link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Economica:700,400italic|Droid+Serif|Boogaloo' 
