--- a/content/_layout/layout.slim
+++ b/content/_layout/layout.slim
@@ -102,8 +102,8 @@ html(lang="en" class="no-js")
         script src='http://www.e-junkie.com/ecom/box.js' 
 
       - if page.lib? :twentytwenty
-        script src='/js/jquery.event.move.js' 
-        script src='/js/jquery.twentytwenty.js'
+        script src='/js/jquery.event.move.min.js' 
+        script src='/js/jquery.twentytwenty.min.js'
 
 
 
