added larger cta for contract support options

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -35,10 +35,13 @@ h1 Support
 
 	.span6
 		h2 Priority Support
+		.hero-unit
+			h3 
+				| Save money and time with our new Support Contract Options
+				a.btn.btn-success href="/support/contracts" Learn more &raquo;
+
 		markdown:
 			Priority email, phone and TeamViewer support costs $135/incident. A [30-minute Q&A session costs $70](/support/consult), but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
-
-			If you work for a business, please [look at the support contract options](/support/contracts) - they can provide significant savings. 
 
 			It is suggested that you download and install [Team Viewer](http://teamviewer.com) on the computer in question, as remote desktop access may be required to resolve your issue.
 
