--- a/content/support/contracts.slim
+++ b/content/support/contracts.slim
@@ -33,58 +33,57 @@ style media="screen" type="text/css"
   | \.fixed-height-col-hero { height:450px; }
   | }
 .row-fluid
-  .span8
+  .span4
     .hero-unit
+      p &nbsp;
       .row-fluid
-        .span4
+        .span8.offset2
           p
             a href="bronze"
-              img alt="Bronze Plan" src="/img/contracts/bronze@2x.png"
-        .span8
-          h1 Bronze
-          p
-            span.label STARTUP
-      h2 
-      	| Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
-      h2
-				| For only $100 more than an Elite license (which is included!), a 6 month Bronze plan is always a better choice than an Elite license alone.
+              img alt="ImageResizer Bronze" src="/img/contracts/bronze.png"
+      p &nbsp;
+      p
+    	| Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
+			| For only $100 more than an Elite license (which is included!), a 6 month Bronze plan is always a better choice than an Elite license alone.
       p &nbsp;
       p
         a.btn.btn-primary.btn-large href="bronze"
           | Learn more about Bronze &raquo;
-
   .span4
     .hero-unit
+      p &nbsp;
       .row-fluid
-        .span4
+        .span8.offset2
+          p
+            a href="silver"
+              img alt="ImageResizer Silver" src="/img/contracts/silver.png"
+      p
+      | &nbsp;
+      p
+      | Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes unlimited support incidents to your entire organization, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
+      p
+      | We'll also give you serious preventative help - 2 free hours of architecture consulting and up to 6 free hours of custom development are included, to ensure that 3am call never happens.
+      p
+      | &nbsp;
+      p
+        a.btn.btn-primary.btn-large href="silver"
+          | Learn more about Silver &raquo;
+  .span4
+    .hero-unit
+      p &nbsp;
+      .row-fluid
+        .span8.offset2
           p
             a href="gold"
-              img alt="Gold Plan" src="/img/contracts/gold@2x.png"
-        .span8
-          h1 Gold
-          p
-            span.label ENTERPRISE
-      p Unlimited emergency support incidents across your organization. Hot-fixes delivered within 2 business days. Up to 20 free hours of custom development, and 5 hours of preventative consulting. We know how to scale to hundreds of terabytes of images and keep your sites running smooth.
+              img alt="ImageResizer Gold" src="/img/contracts/gold.png"
+      p &nbsp;
+      p
+      | Unlimited emergency support incidents across your organization. Hot-fixes delivered within 2 business days. Up to 20 free hours of custom development, and 5 hours of preventative consulting. We know how to scale to hundreds of terabytes of images and keep your sites running smooth.
       p &nbsp;
       p
         a.btn.btn-primary.btn-large href="gold"
           | Learn more about Gold &raquo;
-    .hero-unit
-      .row-fluid
-        .span4
-          p
-            a href="silver"
-              img alt="Silver Plan" src="/img/contracts/silver@2x.png"
-        .span8
-          h1 Silver
-          p
-            span.label SMALL BUSINESS
-			p Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes unlimited support incidents to your entire organization, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
-			p We'll also give you serious preventative help - 2 free hours of architecture consulting and up to 6 free hours of custom development are included, to ensure that 3am call never happens.
-			p &nbsp;
-      p
-        a.btn.btn-primary.btn-large href="silver"
-          | Learn more about Silver &raquo;
+
 h2 Purchase Orders and Invoices
 p You may request an invoice by e-mailing **support@imageresizing.net** with your company name and billing address.
 script language="javascript" type="text/javascript"
