--- a/content/support/gold.slim
+++ b/content/support/gold.slim
@@ -24,13 +24,13 @@ ul.nav.nav-pills
 
 
 .row.hero-unit
-  .span8
-    h1 Gold
+  .span3
+    h1
+      img alt="ImageResizer Gold Plan" src="http://z.zr.io/rw/contracts/gold.png"
+  .span5
     p The Gold Plan is our premier Support Contract designed for exclusively for the enterprise. We understand mission critical applications required fast turn around and response times.
     p The Gold Plan provides priority support and guaranteed hot-fix turnaround in 2 business days. It also provides extensive Architecture Planning, Custom Development and Assisted Installations often needed for enterprise scale applications.
   .span3
-    p
-      small &nbsp;
     form accept-charset="UTF-8" action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=1087334&amp;cl=41912&amp;ejc=2" method="POST" target="ej_ejc"
       input name="o1" type="hidden" value="Gold Tier 6 Month Contract"
         p
@@ -56,11 +56,11 @@ ul.nav.nav-pills
 - quality_high = 90
 - quality_low = 80
 - image_prefix = "http://z.zr.io/rw/contracts/"
-- feature = [["world-code.jpg", "Custom Development", "10 Hours Custom Development", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["touchscreen-gears.jpg", "5 Hours Architecture Planning", "5 Hours Architecture Planning", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["touchscreen-architecture.jpg", "5 hours Architecture Planning", "5 hours Architecture Planning", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["clock-tech-closeup.jpg", "10 Assisted Installations", "10 Assisted Installations", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["speedometer.jpg", "Guaranteed Support Response time in 2 hours", "Guaranteed Support Response time in 2 hours", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["data-center.jpg", "Priority Hot-fixes in 2 Business Days, Guaranteed", "Priority Hot-fixes in 2 Business Days, Guaranteed", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["support-button.jpg", "Unlimited Support Incidents", "Unlimited Support Incidents", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["email.jpg", "Unlimited Designated Contacts", "Unlimited Designated Contacts", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"], ["code-lock.jpg", "Custom e-mail to contact support", "Custom e-mail to contact support", "Blanditiis, quas, cumque, neque ipsa atque commodi facere reiciendis eum labore sit iste officia. Sint, corporis quidem alias sequi quam atque quo dolores quis vitae excepturi fuga magni id quod?"]]
+- feature = [["world-code.jpg", "Custom Development", "10 Hours Custom Development", "Custom Development by the people that know ImageResizer best. If you are looking for the best performance, practices and security for ImageResizer, this the service for you."], ["touchscreen-architecture.jpg", "5 hours Architecture Planning", "5 hours Architecture Planning", "Whether you at the beginning stages of your project or updating an existing one, consult with the ImageResizer experts and resolve issues upfront."], ["data-center.jpg", "10 Assisted Installations", "10 Assisted Installations", "Save time by allowing us to do up to 10 assisted installs per year. We know ImageResizer best and use our experience and best practices to ensure things are running smoothly."], ["clock-tech-closeup.jpg", "Guaranteed Support Response time in 2 hours", "Guaranteed Support Response time in 2 hours", "Our enterprise customers don't have to wait. Get a response from our support staff within two hours, guaranteed."], ["speedometer.jpg", "Priority Hot-fixes in 2 Business Days, Guaranteed", "Priority Hot-fixes in 2 Business Days, Guaranteed", "If you are running enterprise level applications it is critical that everything is running as expected. With our Gold Plan we guarantee priority hot-fixes wihtin two business days."], ["support-button.jpg", "Unlimited Support Incidents", "Unlimited Support Incidents", "Where some support contracts limited you to one support incident during business hours, with the Gold Plan you get an unlimited number."], ["email.jpg", "Unlimited Designated Contacts", "Unlimited Designated Contacts", "Unlike the Bronze Plan you get an unlimited number of contacts at your organization. That means anyone from your company can contact us for support."], ["code-lock.jpg", "Custom e-mail to contact support", "Custom e-mail to contact support", "When you sign up for this support contract we will create a custom email address that you can use to get priority support."], ["touchscreen-gears.jpg", "Free Plugin Upgrades", "Free Plugin Upgrades", "Keep your app secure and up to date with free plugin upgrades for the duration of your contract."]]
 
-- feature.each_slice(4) do | f_b | 
+- feature.each_slice(4) do | f_b |
 	.row
-		- f_b.each do | f | 
+		- f_b.each do | f |
 			.span3
 				p
 					img alt="f[1]" data_pixel_width="#{data_pixel_width}" data-slimmage="true" data-src="#{image_prefix}#{f[0]}?width=#{normal_width}&format=jpg&quality=#{quality_high}" src="#{image_prefix}#{f[0]}?width=#{data_pixel_width}&format=jpg&quality=#{quality_low}"
@@ -70,6 +70,6 @@ ul.nav.nav-pills
 		.span12
 			p &nbsp;
 
-/ inline this to slimmage.js 
+script src="http://www.e-junkie.com/ecom/box.js" type="text/javascript"
 javascript:
   | window.slimmage = {tryWebP:true, verbose:false};
