img src fix, cleanup

--- a/content/support/contracts.slim
+++ b/content/support/contracts.slim
@@ -40,7 +40,7 @@ style media="screen" type="text/css"
         .span8.offset2
           p
             a href="bronze"
-              img alt="ImageResizer Bronze" src="/img/contracts/bronze.png"
+              img alt="ImageResizer Bronze" src="http://z.zr.io/rw/contracts/bronze.png"
       p &nbsp;
       p
     	| Get on track fast and avoid costly errors. Bronze Support includes a 30-minute architecture consulting call to help you make the most of ImageResizer. It also gives your designated point of contact 1 free priority support incident per month.
@@ -56,7 +56,7 @@ style media="screen" type="text/css"
         .span8.offset2
           p
             a href="silver"
-              img alt="ImageResizer Silver" src="/img/contracts/silver.png"
+              img alt="ImageResizer Silver" src="http://z.zr.io/rw/contracts/silver.png"
       p
       | &nbsp;
       p
@@ -75,7 +75,7 @@ style media="screen" type="text/css"
         .span8.offset2
           p
             a href="gold"
-              img alt="ImageResizer Gold" src="/img/contracts/gold.png"
+              img alt="ImageResizer Gold" src="http://z.zr.io/rw/contracts/gold.png"
       p &nbsp;
       p
       | Unlimited emergency support incidents across your organization. Hot-fixes delivered within 2 business days. Up to 20 free hours of custom development, and 5 hours of preventative consulting. We know how to scale to hundreds of terabytes of images and keep your sites running smooth.
