--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -19,6 +19,8 @@ h1 ImageResizer Community
       li: a href="https://github.com/nathanaeljones/studiojs": strong GUI image editor: StudioJS, a jQuery plugin
 
       li: a href="http://cropup.codeplex.com/" Eksponent CropUp - Plugin for weighted semi-auto cropping
+      li: a href="https://github.com/imazen/slimmage" Slimmage - sane &amp; simple responsive images
+
     ul.circle_list
       li: a href="http://cropimage.net" CropImage.NET: The replacement for WebCropImage
       li Upload & crop with ImageStudio (found in /Contrib) 
