Add HybridFramework and AdaptiveImages to community page

--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -25,9 +25,10 @@ h1 ImageResizer Community
       li: a href="http://cropimage.net" CropImage.NET: The replacement for WebCropImage
       li Upload & crop with ImageStudio (found in /Contrib) 
       li: a href="http://www.garralab.com/nailthumb-serverside-demo.php" jQuery NailThumb by Garralabs
-
+      li: a href="https://github.com/hadynz/ImageResizer.Plugins.AdaptiveImages" Adaptive Images port by Hady Osman
     .title: h2 Umbraco Packages & Kits
     ul.star_list
+      li: a href="https://github.com/jbreuer/Hybrid-Framework-Best-Practices" HybridFramework Umbraco Starter Solution
       li: a href="http://our.umbraco.org/projects/starter-kits/ubootstrap" uBootstrap
       li: a href="http://our.umbraco.org/projects/website-utilities/eksponent-cropup" eksponent CropUp
       li: a href="http://gobasic.dk/" Go Basic - Denmark government website starter kit
